[gd_scene load_steps=2 format=3 uid="uid://options_menu_scene"]

[ext_resource type="Script" path="res://src/ui/options_menu.gd" id="1_options"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_options")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.12, 0.25, 1.0)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(500, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1.0, 0.85, 0.0, 1.0)
text = "Options"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="MasterRow" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/MasterRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
theme_override_font_sizes/font_size = 22
text = "Master"

[node name="MasterSlider" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer/MasterRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicRow" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/MusicRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
theme_override_font_sizes/font_size = 22
text = "Music"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer/MusicRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 0.8

[node name="SFXRow" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/SFXRow"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
theme_override_font_sizes/font_size = 22
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="CenterContainer/PanelContainer/VBoxContainer/SFXRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.05
value = 1.0

[node name="Spacer2" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="BackButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(250, 50)
theme_override_font_sizes/font_size = 24
text = "Back"
